# flashinfer-bench-tma-thrust

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_modal.py
docs/: GDN_SOURCE_ARGUMENT_MAP.md  OPTIMIZATION_LOG.md  PERFORMANCE.md  ROADMAP.md  ROOFLINE.md  ZHIHU_GDN_STATE_OPTIMIZATION_EXPLOSIVE.md  ZHIHU_GDN_TENSOR_CORE.md  ZHIHU_GDN_VS_FLASHATTENTION_EXPLOSIVE.md
dsa/: CONTEXT.md  README.md  b200_runner.py
dsa/benchmarks/: bench_local.py  bench_modal.py  profile_modal.py  profile_selection_modal.py  tune_launch_modal.py  tune_selection_modal.py  tune_weighted_q_modal.py
dsa/common/: __init__.py  config.py  indexer.py  reference.py
dsa/decode/: __init__.py  config.toml
dsa/docs/: COMPETITION.md  ROADMAP.md
dsa/prefill/: __init__.py  config.toml
dsa/tests/: test_correctness.py  test_modal.py
dsa/trace_definitions/: deepseek_dsa_decode_mla_core_v1.json  deepseek_dsa_prefill_mla_core_v1.json
gdn/: README.md  gdn_kernels.cu
gdn/benchmarks/: bench_modal.py  bench_quantization_perf.py
gdn/decode/: config.toml
gdn/docs/: NEXT_TODO.md  OPTIMIZATION_LOG.md  PERFORMANCE.md  ROADMAP.md  ZHIHU_CHUNKWISE_PARALLEL.md  ZHIHU_GDN_INFERENCE.md  ZHIHU_GDN_QUANTIZATION.md  ZHIHU_GDN_STATE_OPTIMIZATION.md  ZHIHU_GDN_TENSOR_CORE.md  ZHIHU_GDN_VS_FLASHATTENTION.md
gdn/kernels/: README.md
gdn/prefill/: config.toml
gdn/scripts/: bench_all_cuda.py  bench_comprehensive.py  bench_cuda_prefill.py  bench_cuda_real.py  bench_cute_vs_triton.py  bench_kernels.py  bench_prefill_all.py  bench_prefill_tensorcore.py  (+7 more)
gdn_decode_qk4_v8_d128_k_last/: config.toml
gdn_prefill_qk4_v8_d128_k_last/: config.toml
moe/: README.md  config.toml  modal_common.py
scripts/: bench_all_versions.py  bench_cute_dsl_vs_cpp.py  bench_cutile_vs_triton.py  build_cuda.py  debug_prefill2.py  explore_cute_dsl.py  setup_volume.py  test_cute_dsl.py  test_cute_minimal.py  test_cutile.py
tests/: test_correctness.py  test_fp8_accuracy.py  test_quantization_accuracy.py
(+147 files in other folders)
